--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background: url("images/bg.jpg");
     background-attachment: fixed;
     background-size: cover;
-}
+} 
 
 .inactive {
     display: none;
@@ -17,9 +17,10 @@ body {
     background-color: #1b1b1bdc;
 }
 
+
 header {
     background-color: #551A52;
-    height: 14%;
+    height: 10vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -97,6 +98,13 @@ main {
     align-items: center;
 }
 
+.actionBtn {
+    width: 50px; height: 50px;
+    margin: 10px;
+    background: url("images/play.png");
+    border: none;
+}
+
 .albums {
     display: flex;
     flex-direction: row;
@@ -108,6 +116,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     padding: 0 100px;
 }
 
@@ -116,8 +125,7 @@ main {
     border-radius: 5px;
 }
 
-button {
-    width: 25px; height: 25px;
+/* button {
     margin: 5px 0;
     display: flex;
     justify-content: center;
@@ -125,7 +133,7 @@ button {
     border-radius: 20%;
     border: solid black 1px;
     padding: 10px 0;
-}
+} */
 
 .equalizer {
     display: flex;
@@ -142,25 +150,39 @@ button {
     padding: 50px 0 ;
 }
 
-.tg {
+.tgMain {
     width: 250px; height: 250px;
 }
 
-/* .works {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-
-.linksPage {
+.worksContainer {
+    margin: 50px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.linkContainer {
+.work {
+    width: 40%;
+    border: #fff solid 1px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.inspirationContainer {
+    height: calc(100vh - 10vh - 15vh);
+}
+
+#linkPage p{
+    display: flex;
+    justify-content: center;
+}
+
+.linkContainer {
+    height: calc(100vh - 15vh - 15vh);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .imgLink {
@@ -168,10 +190,12 @@ button {
 }
 
 footer {
+    height: 10vh;
+    display: flex;
+    align-self: center;
     font-size: 16px;
     padding: 15px;
     background-color:#2c2c2c;
-    display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;
