--- a/style.css
+++ b/style.css
@@ -9,27 +9,26 @@ body {
     background-size: cover;
 } 
 
-.inactive {
-    display: none;
-}
-
 .site {
     background-color: #1b1b1bdc;
 }
 
 
 header {
+    position: fixed;
     background-color: #551A52;
-    height: 10vh;
+    height: 10vh; width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
+#mainInfo {
+    padding: 100px 0 0 0;
+}
+
 .icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 30vh; height: 30vh;
     border-radius: 10px;
 }
 
@@ -87,10 +86,6 @@ main {
     padding: 50px 0;
 }
 
-.avatarMain {
-    width: 250px; height: 250px;
-}
-
 .music {
     display: flex;
     flex-direction: column;
@@ -124,16 +119,6 @@ main {
     width: 150px; height: 150px;
     border-radius: 5px;
 }
-
-/* button {
-    margin: 5px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20%;
-    border: solid black 1px;
-    padding: 10px 0;
-} */
 
 .equalizer {
     display: flex;
@@ -169,8 +154,11 @@ main {
     justify-content: flex-start;
 }
 
-.inspirationContainer {
-    height: calc(100vh - 10vh - 15vh);
+#inspiration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
 }
 
 #linkPage p{
@@ -178,15 +166,15 @@ main {
     justify-content: center;
 }
 
+#linksPage h2 {
+    display: flex;
+    justify-content: center;
+}
+
 .linkContainer {
-    height: calc(100vh - 15vh - 15vh);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.imgLink {
-    width: 250px; height: 250px;
 }
 
 footer {
@@ -199,4 +187,10 @@ footer {
     flex-direction: column;
     justify-content: center; 
     align-items: center;
+}
+
+@media(max-width: 900px) {
+    header {
+        width: 100vw;
+    }
 }
