--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
+    width: 100vw;
     margin: 0; padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5em;
     color: #fff;
 
     background: url("images/bg.jpg");
+    background-color: #1b1b1bdc;
     background-attachment: fixed;
     background-size: cover;
 } 
@@ -12,7 +14,6 @@ body {
 .site {
     background-color: #1b1b1bdc;
 }
-
 
 header {
     position: fixed;
@@ -28,6 +29,7 @@ header {
 }
 
 .icon {
+    display: none;
     width: 30vh; height: 30vh;
     border-radius: 10px;
 }
@@ -116,16 +118,8 @@ main {
 }
 
 .img {
-    width: 150px; height: 150px;
+    width: 20vh; height: 20vh;
     border-radius: 5px;
-}
-
-.equalizer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 300px; height: 150px;
-    background-color: #BA88BB;
 }
 
 .telegram {
@@ -135,9 +129,6 @@ main {
     padding: 50px 0 ;
 }
 
-.tgMain {
-    width: 250px; height: 250px;
-}
 
 .worksContainer {
     margin: 50px 0;
@@ -180,9 +171,8 @@ main {
 footer {
     height: 10vh;
     display: flex;
-    align-self: center;
-    font-size: 16px;
-    padding: 15px;
+    font-size: 1em;
+    padding: 1em;
     background-color:#2c2c2c;
     flex-direction: column;
     justify-content: center; 
@@ -190,7 +180,8 @@ footer {
 }
 
 @media(max-width: 900px) {
-    header {
-        width: 100vw;
+    .albums {
+        display: flex;
+        flex-wrap: wrap;
     }
 }
