--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 header {
     position: fixed;
+    z-index: 1;
     background-color: #551A52;
     height: 10vh; width: 100vw;
     display: flex;
@@ -24,7 +25,7 @@ header {
     align-items: center;
 }
 
-#mainInfo {
+.block {
     padding: 15vh 0 0 0;
 }
 
@@ -126,7 +127,6 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding: 50px 0 ;
 }
 
 
@@ -157,6 +157,17 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: left;
+}
+
+.bx-wrapper {
+    position: relative;
+    z-index: 0;
+    width: 800px;
+    background-color: #1b1b1bdc;
+}
+
+.slider {
+    width: 800px; height: 500px;
 }
 
 #linkPage p{
