--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5em;
     color: #fff;
-
     background: url(images/bg.jpg);
     background-attachment: fixed;
     background-size: cover;
 } 
 
 .site { background-color: #1b1b1bdc; }
+
+.inactive { display: none; }
 
 header {
     height: 10vh; width: 100vw;
@@ -38,14 +39,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40vh; height: 20vh;
+    width: 40vh; height: 5em;
     background-color: #551A52;
     color: #fff;
     border-radius: 10px;
 }
 
 .link-block {
-    width: 30vh; height: 7vh;
+    width: 30vh; height: 3em;
     background-color: #772473;
 }
 
@@ -60,9 +61,7 @@ header {
     font-size: .8em;
 }
 
-.head {
-    padding: 0 2em;
-}
+.head { padding: 0 2em; }
 
 .avatar-header {
     height: 7vh; width: 7vh;
@@ -99,7 +98,7 @@ main {
 
 .action-btn {
     width: 50px; height: 50px;
-    margin: 10px;
+    margin: 0.7em;
     background: url(images/play.png);
     border: none;
 }
@@ -128,6 +127,16 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+.btn { 
+    background-color: #b637af; 
+    color: #260d88;
+    text-decoration: underline;
+}
+
+.btn:hover {
+    color: black;
 }
 
 .tg-link {
@@ -172,16 +181,29 @@ main {
 }
 
 .insp-btn {
-    background-color: #772473;
+    height: 3em;
     border-radius: 10px;
     text-align: center;
     padding: 0;
     font-size: 1.2em;
 }
 
-.slider {
-    width: 800px; height: 500px;
+.insp-btn:hover {
+    cursor: pointer;
+} 
+
+.list {
+    background-color: #1b1b1bea;
+    text-align: center;
 }
+
+.list h2 {
+    padding: .8em 1.5em;
+    background-color: #551A52;
+    border-radius: 10%;
+}
+
+.slider { width: 800px; height: 500px; }
 
 #links-page h2 {
     display: flex;
@@ -199,7 +221,8 @@ main {
 .link-container a {
     display: flex;
     justify-content: center;
-    color: #fff;
+    padding: .5em .2em;
+    border-radius: 10%;
 }
 
 footer {
@@ -215,27 +238,21 @@ footer {
 }
 
 @media (orientation: portrait) and (max-width: 1080px){
-    body {
-        font-size: 2em;
-    }
+    body { font-size: 2em; }
 
-    header {
-        height: 20vh;
-    }
+    header { height: 20vh; }
 
     .block { padding: 5vh 0 0 0; }
 
-    #main-info {
-        padding: 20vh 0 0 0;
-    }
+    #main-info { padding: 20vh 0 0 0; }
 
-    .icon {
-        width: 30vh; height: 30vh;
-    }
+    .icon { width: 30vh; height: 30vh; }
 
-    .text {
-        width: 60%;
-    }
+    .text { width: 60%; }
+
+    .tg-link { margin: 2vh 0 0 0; }
+
+    .qr { display: none; }
 
     .action-btn {
         width: 100px; height: 100px;
@@ -257,10 +274,6 @@ footer {
         flex-wrap: wrap;
     }
 
-    .tg-link {
-        margin: 2vh 0 0 0;
-    }
-
     .albums {
         width: 60vw;
         display: flex;
@@ -272,6 +285,8 @@ footer {
         flex-direction: column;
     }
 
-    .qr { display: none; }
+}
 
+@media (orientation: landscape) and (max-width: 1080px){
+    .link-block { font-size: smaller; }
 }
