--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
 body {
     margin: 0; padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Poetsen One", sans-serif;
     font-size: 1.5em;
     color: #fff;
     background: url(images/bg.jpg);
@@ -57,18 +60,18 @@ header {
 }
 
 .text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40vh; height: 5em;
-    background-color: #551A52;
-    color: #fff;
-    border-radius: 10px;
+    width: 30vw; height: 13em;
+    text-align: justify;
+    background-color: #490c46;
+    border-radius: 5px;
+    text-indent: 3ch;
+    padding: 0 5vh;
 }
 
 .link-block {
     width: 30vh; height: 3em;
     background-color: #772473;
+    font-family: "Open Sans", sans-serif;
 }
 
 .links {
@@ -82,6 +85,7 @@ header {
     font-size: .8em;
     color: #ff87f9;
     text-decoration: underline;
+    font-family: "Open Sans", sans-serif;
 }
 
 .link:hover {
@@ -171,6 +175,10 @@ main {
     background-color: #551A52; 
     color: #ff87f9;
     text-decoration: underline;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
 .btn:hover {
@@ -220,6 +228,7 @@ main {
 }
 
 .insp-btn {
+    font-family: "Open Sans", sans-serif;
     height: 3em;
     border-radius: 10px;
     text-align: center;
@@ -287,7 +296,10 @@ footer {
 
     .icon { width: 30vh; height: 30vh; }
 
-    .text { width: 60%; }
+    .about > .text { 
+        width: 65%; height: 16em;
+        margin: 5vh 0 0 0 ;
+    }
 
     .tg-link { margin: 2vh 0 0 0; }
 
@@ -324,6 +336,8 @@ footer {
         display: flex;
         flex-wrap: wrap;
     }
+
+    .insp-btn { width: 50vw; }
 
     .links {
         display: flex;
